[metadata]
name = createmypypackage
version = 0.0.3
author = Souvic Chakraborty
author_email = chakra.souvic@gmail.com
description = Provides a basic package structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Souvic/createmypypackage.git
project_urls =
    Bug Tracker = https://github.com/Souvic/createmypypackage.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	
[console_scripts]
createmypypackage = createmypypackage:main

[options.packages.find]
where = src

