[metadata]
name = createmypypackage
version = 0.0.7
author = Souvic Chakraborty
author_email = chakra.souvic@gmail.com
description = One command simplest way to make and upload a python package!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Souvic/createmypypackage.git
project_urls =
    Bug Tracker = https://github.com/Souvic/createmypypackage.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	build>=0.5
	virtualenv>=20.4.7
	pipreqs>=0.4.10
	twine>=3.4.1
	
[options.entry_points]
console_scripts =
    cmpp = createmypypackage:main
    createmypypackage = createmypypackage:main

[options.packages.find]
where = src

